# PipelineBuilder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: hello_world.py  multi_agent.py  parallel_demo.py  pr_review.py  pr_review_mock.py  quickstart.py  stage_graph.py
pipeline_builder/: __init__.py  cli.py
pipeline_builder/ai/: __init__.py  base.py  claude.py  mock.py  openai_adapter.py
pipeline_builder/core/: agent.py  checkpoint.py  dag.py  executor.py  goal_check.py  group.py  loop.py  pipeline.py  router.py  stage.py  state.py  versioning.py  viz.py
pipeline_builder/persistence/: __init__.py  base.py  file_backend.py  sqlite_backend.py
pipeline_builder/tracing/: __init__.py  traced_adapter.py  tracer.py
tests/: test_agents.py  test_ai.py  test_async.py  test_goal_check.py  test_optimizations.py  test_persistence.py  test_pipeline.py  test_progress.py  test_stage_graph.py  test_state.py  test_tracing.py  test_typed_state.py  test_versioning.py  test_viz.py
